# fast-Regression

./: CMakeLists.txt  LICENSE  README.md
include/: customexceptions.h  matrix.h  model.h  stats.h
src/: matrix.cpp  model.cpp  stats.cpp
tests/: matrixTest.cpp  modelTest.cpp  testing.h
